--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"appId": 1991040, "depots": [1991041], "dlcs": [], "packagedlcs": [], "app_token": 0}
+{"appId": 1991040, "depots": [1991041], "dlcs": [], "packagedlcs": [], "app_token": 0, "SteamId": 76561198951258158}
