--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"appId": 2470300, "depots": [2470301], "dlcs": [], "packagedlcs": [], "app_token": 0}
+{"appId": 2470300, "depots": [2470301], "dlcs": [], "packagedlcs": [3380330], "app_token": 0}
