--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"appId": 2921670, "depots": [2921671], "dlcs": [], "packagedlcs": [], "app_token": 0}
+{"appId": 2921670, "depots": [2921671], "dlcs": [], "packagedlcs": [], "app_token": 8978611439738243316}
