--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"appId": 2676930, "depots": [2676931], "dlcs": [], "packagedlcs": [], "app_token": 0}oken": 0}
+{"appId": 2676930, "depots": [2676931], "dlcs": [], "packagedlcs": [], "app_token": 0}
