--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"appId": 2397250, "depots": [2397251, 3417620], "dlcs": [3417620], "packagedlcs": [], "app_token": 0}
+{"appId": 2397250, "depots": [2397251, 3417620], "dlcs": [3417620], "packagedlcs": [], "app_token": 18120428214952651223}
