--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"appId": 3380720, "depots": [3380721, 3380722], "dlcs": [], "packagedlcs": [], "app_token": 0}
+{"appId": 3380720, "depots": [3380721, 3380722], "dlcs": [], "packagedlcs": [], "app_token": 17014698030686997416}
