--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"appId": 3244220, "depots": [3244221], "dlcs": [], "packagedlcs": [], "app_token": 0}
+{"appId": 3244220, "depots": [3244221], "dlcs": [], "packagedlcs": [], "app_token": 0, "SteamId": 76561199103988789}
