--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"appId": 3301060, "depots": [3301061], "dlcs": [3465160], "packagedlcs": [3359730], "app_token": 0}
+{"appId": 3301060, "depots": [3301061], "dlcs": [], "packagedlcs": [3465160,3359730], "app_token": 0}
